--- a/Ekmek.UI/Ekmek.UI.csproj
+++ b/Ekmek.UI/Ekmek.UI.csproj
@@ -95,14 +95,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Upload\img\BeyazEsya1.jpg" />
+    <Content Include="Upload\img\BeyazEsya2.jpg" />
+    <Content Include="Upload\img\BeyazEsya3.jpg" />
+    <Content Include="Upload\img\BeyazEsya4.jpg" />
+    <Content Include="Upload\img\Bilgisayar1.jpg" />
+    <Content Include="Upload\img\Bilgisayar2.jpg" />
+    <Content Include="Upload\img\Bilgisayar3.jpg" />
+    <Content Include="Upload\img\Bilgisayar4.jpg" />
+    <Content Include="Upload\img\Camera1.jpg" />
+    <Content Include="Upload\img\Camera2.jpg" />
+    <Content Include="Upload\img\Camera3.jpg" />
+    <Content Include="Upload\img\Camera4.jpg" />
+    <Content Include="Upload\img\Camera5.jpg" />
+    <Content Include="Upload\img\DefaultImage.jpg" />
+    <Content Include="Upload\img\Hali1.jpg" />
+    <Content Include="Upload\img\Hali2.jpg" />
+    <Content Include="Upload\img\Hali3.jpg" />
+    <Content Include="Upload\img\Hali4.jpg" />
+    <Content Include="Upload\img\Oyun1.jpg" />
+    <Content Include="Upload\img\Oyun2.jpg" />
+    <Content Include="Upload\img\Oyun3.jpg" />
+    <Content Include="Upload\img\Oyun4.jpg" />
+    <Content Include="Upload\img\Telefon1.jpg" />
+    <Content Include="Upload\img\Telefon2.jpg" />
+    <Content Include="Upload\img\Telefon3.jpg" />
+    <Content Include="Upload\img\Telefon4.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\style.css" />
-    <Content Include="Content\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\img\Canon01.jpg" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
     <Content Include="Scripts\popper.js" />
@@ -123,20 +148,22 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ProductVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
-    <Content Include="Content\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\ShowList.cshtml" />
+    <Content Include="Views\Shared\_ProductList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -146,7 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="theme\css\" />
     <Folder Include="theme\js\" />
   </ItemGroup>
